core: Fixed ticker clipping bug (temporary).

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ body {
     color: #8ea598;
     font-family: "Cascadia Code";
     font-size: 14px;
-    margin: 4px;
-    padding: 8px;
-    width: 20px;
+    align-content: center;
+    text-align: center;
+    padding: 4px;
 }
